# base-django-project

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  compose.yml  docker-compose.yml  mise.toml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  build.py  local.py  prod.py  test.py
