[project]
name = "base_django_project"
version = "0.1.0"
description = "Default template for UV"
authors = [{ name = "Martin Faucheux", email = "martin.faucheux@gmail.com" }]
dependencies = [
    "djangorestframework>=3.16.0",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
    "django>=5.2",
    "psycopg[binary,pool]>=3.2.7",
    "whitenoise>=6.9.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "djangorestframework-stubs>=3.16.0",
    "factory-boy>=3.3.3",
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
addopts = """
   --reuse-db
"""


[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["F", "E", "W", "I001"]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]
